# template-python-library

./: .bumpversion.cfg  .editorconfig  .export_reqs.py  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CNAME  README.md  bumpversion  generate_docs  genindex.html  index.html  modules.html  objects.inv  project_init.sh  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml  template_python_library.html
.config/: .bumpversion.cfg
.github/workflows/: docs.yml  python-publish.yml
_modules/: index.html
_modules/template_python_library/: app.html
_sources/: index.rst.txt  modules.rst.txt
docs/source/: conf.py  index.rst  template_python_library.rst
src/template_python_library/: __init__.py
tests/: conftest.py  test_app.py
