[tool.poetry]
name = "template"
version = "0.0.1"
description = "Description"
authors = ["Daniel Sullivan <>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/mumblepins/python-template-repo/"
documentation = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = { version = "^22", allow-prereleases = true }
Sphinx = "^3.5"
sphinx-rtd-theme = "^1.0"
pre-commit = "^2.17.0"

[tool.poetry.extras]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
